--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,69 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 10px;
+}
+
+@keyframes skretch{
+    0%{width: 0;}
+    100%{width: 300px;}
+}
+@keyframes skretch2{
+    0%{width: 300px;}
+    100%{width: 0;}
+}
+
+.inpu__box{
+    display: block;
+    width: 0;
+    height: 300px;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: -60px;
+    background-color: #3f4041;
+    animation-name: skretch2;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-in-out;
+}
+.inpu__box2{
+    display: block;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    z-index: 3;
+    bottom: 0;
+    left: 0;
+    background-color: #3f4041;
+    animation-name: skretch;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-in-out;
+}
+
+.add{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #2a2b2c;
+    position: absolute;
+    bottom: 24px;
+    right: 24px;
+    z-index: 2;
+}
+
+.add button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    font-size: 4rem;
+    color: #807c7c;
+}
